#ifndef MAINDECARTES_H
#define MAINDECARTES_H
#include "carte.h"

class MainDeCartes{
    private:
        std::vector<Carte> cartesEnMain;
    public:
        MainDeCartes();

};

#endif

