#ifndef ROYAUME_H
#define ROYAUME_H
#include "carte.h" 

class royaume : public Carte
{
private:
    /* data */
public:
    royaume(/* args */);
    ~royaume();
};




#endif